fix contract
